# -Neurons-github-cppcourse-brunel

./: CMakeLists.txt  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  README.md  constants.hpp  main_neuron.cpp  test_main.cpp
FinalNeuronProject/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  d.py
FinalNeuronProject/doxygen/html/: Network_8hpp_source.html  Neuron_8hpp_source.html  annotated.html  classNetwork-members.html  classNetwork.html  classNeuron-members.html  classNeuron.html  classes.html  constants_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html
FinalNeuronProject/doxygen/html/search/: all_1.js  all_2.js  all_6.js  all_7.js  all_8.js  functions_1.js  functions_4.js  functions_5.js  variables_3.js  variables_6.js
FinalNeuronProject/doxygen/latex/: classNetwork.tex  classNeuron.tex  refman.tex
FinalNeuronProject/plots/: spikeplotD.txt
FinalNeuronProject/src/: Introduction.txt  Introduction.txt~  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  constants.hpp  main_neuron.cpp  test_main.cpp
Neuron Project/: CMakeLists.txt  Doxyfile.in  Network.hpp  Neuron.hpp  constants.hpp  main_neuron.cpp  test_main.cpp
Neuron Project/gtest/: CTestTestfile.cmake
NeuronProject/: Network.cpp  Neuron.cpp  classes.html
NeuronProject/doxygen/html/: Network_8hpp_source.html  Neuron_8hpp_source.html  annotated.html  classNetwork-members.html  classNetwork.html  classNeuron-members.html  classNeuron.html  classes.html  constants_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html
NeuronProject/doxygen/html/search/: all_0.js  all_1.js  all_6.js  all_8.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  search.js  variables_2.js  variables_4.js  variables_5.js
NeuronProject/doxygen/latex/: classNetwork.tex  classNeuron.tex  refman.tex
NeuronProject/gtest/: Makefile  cmake_install.cmake
